--- a/alphapwd/alphapwd.html
+++ b/alphapwd/alphapwd.html
@@ -2,9 +2,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Alphapwd Interactive</title>
         <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="paperjs/paper-core.js"></script>
+        <script type="text/javascript" src="animation.js"></script>
         <script type="text/javascript" src="alphapwd.js"></script>
     </head>
     <body onload="main();">
