chrome size fix

--- a/alphapwd/alphapwd.html
+++ b/alphapwd/alphapwd.html
@@ -17,7 +17,7 @@
                 <col span="1" style="width: 65%">
                 <col span="1" style="width: 35%">
             </colgroup>
-            <tr><tbody>
+            <tbody><tr>
                 <td><canvas resize id="interactive">This website is not supported by your browser. Try an up-to-date version if Chrome or Firefox!</canvas></td>
                 <td>
                     <div id="slideBody">
