--- a/alphapwd/alphapwd.html
+++ b/alphapwd/alphapwd.html
@@ -18,7 +18,7 @@
                 <col span="1" style="width: 35%">
             </colgroup>
             <tbody><tr>
-                <td><canvas resize id="interactive">This website is not supported by your browser. Try an up-to-date version if Chrome or Firefox!</canvas></td>
+                <td><canvas id="interactive">This website is not supported by your browser. Try an up-to-date version if Chrome or Firefox!</canvas></td>
                 <td>
                     <div id="slideBody">
                         <h2 id="slideTitle"></h2>
