--- a/alphapwd/alphapwd.html
+++ b/alphapwd/alphapwd.html
@@ -6,6 +6,7 @@
         <title>Alphapwd Interactive</title>
         <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="paperjs/paper-core.js"></script>
+        <script type="text/javascript" src="zxcvbn/zxcvbn.js"></script>
         <script type="text/javascript" src="animation.js"></script>
         <script type="text/javascript" src="alphapwd.js"></script>
     </head>
@@ -23,6 +24,15 @@
                     <div id="slideBody">
                         <h2 id="slideTitle"></h2>
                         <p id="slideText"></p>
+                        <div id="slide2">
+                            <button id="buttonClear">Clear</button>
+                        </div>
+                        <div id="slide3">
+                            <input type="text" id="password">
+                            <br>
+                            <meter max="4" id="meterStrength"></meter>
+                            <p id="pStrength"></p>
+                        </div>
                     </div>
                     <table id="navButtons"><tbody>
                         <tr>
