change some wording

--- a/alphapwd/alphapwd.html
+++ b/alphapwd/alphapwd.html
@@ -12,7 +12,7 @@
     </head>
     <body onload="main();">
         <h1>Alphapwd</h1>
-        <h3><i>An interactive guide</i></h3>
+        <h3><i>An interactive guide by Greg Mitchell</i></h3>
         <table id="divider">
             <colgroup>
                 <col span="1" style="width: 65%">
